# robotour2025

./: .gitignore  LICENSE  Readme.md  hello.py  readme.md
camera/: calibrate_camera.py  camera_fisheye_calib_c1.npz  cameras.py  client.py  main.py  worker.py
cameras/: robot_cameras.py
drive/: ack_nack.py  ack_nack_test.py  ack_rtt_tester.py  client_handler.py  dispatcher.py  drive_client.py  drive_serial.py  drive_server.py  hb_serial.py  joinstck-to-setrial.py  main.py  parser.py  service.py  xx_serial.py
drive-x/: readme.md
fusion/: client.py  core.py  fusion.py  fusion_core.py  fusion_engine.py  main.py  service.py
gamepad/: datalogger.py  gamepad_client.py  gamepad_control.py  gamepad_core.py  gamepad_server.py
gnss/: client.py  client_handler.py  device.py  esf_dicts.py  gnss_serial.py  gnss_tcp_proxy.py  gyro_smoother.py  lever_arm_heading.py  main.py  nav_fusion-x.py  nav_fusion-x2.py  nav_fusion.py  nmea_dispatcher.py  parse_gnss_feed.py  poller.py  readme.md  service.py  service_start.py  test_nav_fusion.py  ubx.py  ubx_dispatcher.py  unit_test.py
gnss-x/: client.py  esf_dicts.py  gga  main.py
gnss2/: gnss_config.py  gnss_service.py  ubx_keys.py  ubx_proto.py
gnss3/: client_handler.py  main.py  poller.py  service.py  ubx_dispatcher.py
heading/: client.py  dispatcher.py  main.py  (+4 more)
lidar/: CMakeLists.txt  lidar_controller.hpp  ply_logger.hpp  point_processing.hpp  raw_logger.hpp  readme.md  robot_lidar_tcp.cpp
lidar/obsolete/: point_processing-x.hpp
lidar/tools/: capture-udp.py
lidar/unitree_lidar_sdk/include/: unitree_lidar_sdk.h
(+206 files in other folders)
